--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,18 @@
 {
   "name": "Grão Digital",
   "short_name": "Grão Digital",
-  "description": "Gestão de talhões, aplicações e custos",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": ".",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#0e3b22",
-  "theme_color": "#0e3b22",
+  "background_color": "#0b1417",
+  "theme_color": "#0d5f34",
   "icons": [
     {
-      "src": "./icone.png",
+      "src": "icone-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./icone-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./icone-512.png",
+      "src": "icone-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
