--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,25 @@
 {
   "name": "Grão Digital",
   "short_name": "Grão Digital",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0b1417",
-  "theme_color": "#0d5f34",
+  "orientation": "portrait",
+  "background_color": "#0e3b22",
+  "theme_color": "#0e3b22",
   "icons": [
     {
-      "src": "icone-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icone-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-1024.png",
+      "sizes": "1024x1024",
       "type": "image/png"
     }
   ]
